--- a/DinPlanBackend/appsettings.json
+++ b/DinPlanBackend/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Dev": "server=localhost\\sqlexpress01;database=DinnerApi;trusted_connection=true;encrypt=false;",
+    "Dev": "server=localhost\\sqlexpress01;database=DinPlanDB;trusted_connection=true;encrypt=false;",
     "Prod": ""
   }
 }
